Prepare backend configuration for cloud deployment